--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0",
     "should": "^13.2.1"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2"
   }
 }
