use 3rd-party plugin gett-stream to convert stream to string

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "should": "^13.2.1"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "get-stream": "^3.0.0"
   }
 }
