--- a/src/config.json
+++ b/src/config.json
@@ -1,82 +1,62 @@
-[
-  {
-    "rule": "title",
-    "configs": {
-      "section": "head",
-      "tag": "title",
-      "action": {
-        "name": "must-have"
-      },
-      "descriptions": ""
-    } 
+{
+  "title":{
+    "section":"head",
+    "tag":"title",
+    "action":{
+      "name":"must-have"
+    },
+    "descriptions":""
   },
-  {
-    "rule": "meta description",
-    "configs": {
-      "section": "head",
-      "tag": "meta",
-      "attribute": "name",
-      "value": "descriptions",
-      "action": {
-        "name": "must-have"
-      },
-      "descriptions": ""
+  "meta description":{
+    "section":"head",
+    "tag":"meta",
+    "attribute":"name",
+    "value":"descriptions",
+    "action":{
+      "name":"must-have"
+    },
+    "descriptions":""
+  },
+  "meta keywords":{
+    "section":"head",
+    "tag":"meta",
+    "attribute":"name",
+    "value":"keywords",
+    "descriptions":""
+  },
+  "h1":{
+    "section":"body",
+    "tag":"h1",
+    "action":{
+      "name":"limit",
+      "value":1
+    },
+    "descriptions":""
+  },
+  "a":{
+    "section":"body",
+    "tag":"a",
+    "attribute":"rel",
+    "action":{
+      "name":"must-have"
+    },
+    "descriptions":""
+  },
+  "img":{
+    "section":"body",
+    "tag":"img",
+    "attribute":"alt",
+    "action":{
+      "name":"must-have"
+    },
+    "descriptions":""
+  },
+  "strong":{
+    "section":"body",
+    "tag":"strong",
+    "action":{
+      "name":"limit",
+      "value":15
     }
-  },
-  {
-    "rule": "meta keywords",
-    "configs": {
-      "section": "head",
-      "tag": "meta",
-      "attribute": "name",
-      "value": "keywords",
-      "descriptions": ""
-    }
-  },
-  {
-    "rule": "h1",  
-    "configs": {
-      "section": "body",
-      "tag": "h1",
-      "action": {
-        "name": "must-have"
-      },
-      "descriptions": ""
-    } 
-  },
-  {
-    "rule": "a",
-    "configs": {
-    "section": "body",
-      "tag": "a",
-      "attribute": "rel",
-      "action": {
-        "name": "must-have"
-      },
-    "descriptions": ""
-    }
-  },
-  {
-    "rule": "img",
-    "configs": {
-      "section": "body",
-      "tag": "img",
-      "attribute": "alt",
-      "action": {
-        "name": "must-have"
-      },
-      "descriptions": ""
-    }
-  },
-  {
-    "rule": "strong",
-    "configs": {
-      "section": "body",
-      "tag": "strong",
-      "action": {
-        "name": "limit",
-        "value": 15
-      }
-    }   
   }
-]
+ }
