bug fix: `section tag:not([name])` does not imply `section tag`

--- a/src/config.json
+++ b/src/config.json
@@ -22,6 +22,9 @@
     "tag":"meta",
     "attribute":"name",
     "value":"keywords",
+    "action":{
+      "name":"must-have"
+    },
     "descriptions":""
   },
   "h1":{
