--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0",
+    "rewire": "^4.0.1",
     "should": "^13.2.1"
   },
   "dependencies": {
