add 3rd-party plugin `is-valid-path` and solve issue #1; add tests

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "get-stream": "^3.0.0"
+    "get-stream": "^3.0.0",
+    "is-valid-path": "^0.1.1"
   }
 }
