change rule name "limit" to "no-more-than" for better readability

--- a/src/config.json
+++ b/src/config.json
@@ -51,7 +51,7 @@
     "section":"body",
     "tag":"strong",
     "action":{
-      "name":"limit",
+      "name":"no-more-than",
       "value":15
     }
   }
