--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^5.2.0",
     "rewire": "^4.0.1",
-    "should": "^13.2.1"
+    "should": "^13.2.1",
+    "sinon": "^6.1.3"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
