--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "keywords": [
     "SEO"
   ],
+  "bin": {
+    "seomate": "./lib/cli.js"
+  },
   "author": "amigcamel",
   "license": "MIT",
   "devDependencies": {
@@ -31,6 +34,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "commander": "^2.16.0",
     "get-stream": "^3.0.0",
     "is-valid-path": "^0.1.1"
   }
